# synology_backuper

./: .gitignore  Cargo.toml  readme.md
src/: main.rs
