[package]
name = "synology_backuper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
reqwest = { version = "0.12.7", features = ["json", "cookies", "multipart", "blocking"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127", features = ["std"] }
walkdir = "2.5.0"
zip = "2.2.0"
